# lrc

./: COMMERCIAL.md  LICENSE  LICENSE-COMMERCIAL  NOTICE  README.md  pyproject.toml  snapshot.md
examples/: forgekit_schema_full.lrc  schema_dev_example.lrc  schema_example.lrc
src/lrc/: __init__.py
